[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vindecodervehicle"
version = "1.0.0"
description = "Official Python SDK for the VIN Decoder Vehicle API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "VIN Decoder Vehicle", email = "support@vindecodervehicle.com" }]
keywords = ["vin", "vin-decoder", "vehicle", "automotive", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://vindecodervehicle.com"
Documentation = "https://vindecodervehicle.com/api/doc/"
Repository = "https://github.com/JoxMarkes/vindecodervehicle-python-sdk"
Issues = "https://github.com/JoxMarkes/vindecodervehicle-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["vindecodervehicle"]

[tool.pytest.ini_options]
testpaths = ["tests"]